fixed overflow

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -1,7 +1,8 @@
 @use "colors";
 
 @mixin side-padding {
-  padding-inline: clamp(1rem, -1.045rem + 8.73vw, 2.5rem);
+  // padding-inline: clamp(1rem, -1.045rem + 8.73vw, 2.5rem);
+  padding-inline: clamp(1rem, -4.8rem + 15.5vw, 10rem);
 }
 
 @mixin green-button {
